Fix overflow issue

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -6,7 +6,6 @@
    font-family: 'BebasNeue';
    width: 100%;
    color: white;
-   overflow: hidden;
 }
 
 .dcs-footer__close {
